梦幻单词数据库

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>梦幻单词</title>
     <link rel="stylesheet" href="/bt/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bt/css/bootstrap-theme.min.css">
     <script type="text/javascript" src="bt/js/jquery.js"></script>
@@ -10,17 +10,39 @@
 
 </head>
 <body>
+<div>
+<h1 align="center">
+    梦幻单词数据库
+</h1>
+<!--    <div class="row" align="center">-->
+<!--        <div class="col-lg-6">-->
+<!--            <div class="input-group">-->
+<!--                <div class="input-group-btn">-->
+<!--                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>-->
+<!--                    <ul class="dropdown-menu">-->
+<!--                        <li><a href="#">Action</a></li>-->
+<!--                        <li><a href="#">Another action</a></li>-->
+
+<!--                    </ul>-->
+<!--                </div>&lt;!&ndash; /btn-group &ndash;&gt;-->
+<!--                <input type="text" class="form-control" aria-label="...">-->
+<!--            </div>&lt;!&ndash; /input-group &ndash;&gt;-->
+<!--        </div>&lt;!&ndash; /.col-lg-6 &ndash;&gt;-->
+
+<!--    </div>&lt;!&ndash; /.row &ndash;&gt;-->
+
+</div>
+
 <div class="container">
 
     <table class="table table-hover">
 
         <tr>
             <th>Id</th>
-            <th>用户名</th>
-            <th>密码</th>
-            <th>创建时间</th>
-            <th>状态</th>
+            <th>中文</th>
+            <th>英文</th>
             <th>操作</th>
+
         </tr>
         <tbody class="pool">
 
